Fix device detail color picker overflow

--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -390,9 +390,15 @@ main {
 .color-picker {
   list-style: none;
   display: flex;
-  padding: 0;
+  padding: 12px 0;
   align-items: center;
-  margin: 12px 0 20px 0;
+  margin: 0 0 8px 0;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  padding-inline-start: 0;
+  justify-content: center;
 }
 
 .color-picker-item {
